--- a/client/package.json
+++ b/client/package.json
@@ -16,9 +16,13 @@
     "@fullcalendar/interaction": "^5.11.3",
     "@fullcalendar/react": "^5.11.2",
     "@fullcalendar/timegrid": "^5.11.3",
+    "@mui/icons-material": "^5.10.9",
+    "@mui/lab": "^5.0.0-alpha.107",
     "@mui/material": "^5.10.12",
+    "@mui/styled-engine": "^5.10.8",
     "@reduxjs/toolkit": "^1.9.0",
     "axios": "^1.1.3",
+    "flowbite": "^1.5.3",
     "formik": "^2.2.9",
     "he": "^1.2.0",
     "i18next": "^22.0.4",
