--- a/client/package.json
+++ b/client/package.json
@@ -14,7 +14,9 @@
     "@fullcalendar/core": "^5.11.3",
     "@fullcalendar/daygrid": "^5.11.3",
     "@fullcalendar/interaction": "^5.11.3",
+    "@fullcalendar/list": "^5.11.3",
     "@fullcalendar/react": "^5.11.2",
+    "@fullcalendar/rrule": "^5.11.3",
     "@fullcalendar/timegrid": "^5.11.3",
     "@mui/icons-material": "^5.10.9",
     "@mui/lab": "^5.0.0-alpha.107",
