--- a/client/package.json
+++ b/client/package.json
@@ -38,6 +38,7 @@
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.4.3",
     "socket.io-client": "^4.5.3",
+    "uuid": "^9.0.0",
     "yup": "^0.32.11"
   },
   "devDependencies": {
