no comment this))))

--- a/server/Makefile
+++ b/server/Makefile
@@ -7,4 +7,4 @@ db-migrate:
 	npx knex migrate:latest
 
 start:
-	npm run start -- --watch --verbose-watch --ignore-watch='node_modules .git .sqlite'
+	npm run start
