--- a/client/package.json
+++ b/client/package.json
@@ -22,8 +22,11 @@
     "@mui/lab": "^5.0.0-alpha.107",
     "@mui/material": "^5.10.12",
     "@mui/styled-engine": "^5.10.8",
+    "@mui/x-date-pickers": "^5.0.9",
+    "@mui/x-date-pickers-pro": "^5.0.9",
     "@reduxjs/toolkit": "^1.9.0",
     "axios": "^1.1.3",
+    "dayjs": "^1.11.6",
     "flowbite": "^1.5.3",
     "formik": "^2.2.9",
     "he": "^1.2.0",
